--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,6 +45,10 @@ a:hover {
     background-color: #a4f2ff;
 }
 
+.text-center {
+    text-align: center;
+}
+
 /* Header & Navigation */
 header {
     background-color: #282c34;
