--- a/app_blog/templates/app_blog/article_detail.html
+++ b/app_blog/templates/app_blog/article_detail.html
@@ -13,7 +13,7 @@
             <a href="{% url 'app_blog:like_article' article.pk %}" class="btn btn-primary">{% trans "Нравится" %}</a>
         </div>
         <div class="article-content">
-            {{ article.content|linebreaks }}
+            {{ article.content|safe }}
         </div>
 
         <hr>
