--- a/app_home/templates/app_home/base.html
+++ b/app_home/templates/app_home/base.html
@@ -69,6 +69,7 @@
     </script>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="canonical" href="{{ request.build_absolute_uri }}">
 </head>
 <body>
@@ -93,6 +94,10 @@
                             </select>
                         </form>
                     </div>
+                    <ul class="social-links-header">
+                        <li><a href="https://instagram.com/webcraft.digital" class="social-link-header" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://t.me/xumpocmb" class="social-link-header" target="_blank" aria-label="Telegram"><i class="fab fa-telegram"></i></a></li>
+                    </ul>
                 </div>
                 <div class="burger-menu">
                     <span></span>
